A sheet: changed navbar and removed print button

--- a/templates/A.html
+++ b/templates/A.html
@@ -260,19 +260,19 @@
                         </a>
                     </li>
                     <li class="nxl-item">
-                        <a href="CO.html" class="nxl-link">
+                        <a href="A.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-user-plus"></i></span>
                             <span class="nxl-mtext">A (Attract)</span><span class="nxl-arrow"><i></i></span>
                         </a>
                     </li>
                     <li class="nxl-item">
-                        <a href="RE.html" class="nxl-link">
+                        <a href="I.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-share-2"></i></span>
                             <span class="nxl-mtext">I (Interact)</span><span class="nxl-arrow"><i></i></span>
                         </a>
                     </li>
                     <li class="nxl-item">
-                        <a href="R.html" class="nxl-link">
+                        <a href="M.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-file-text"></i></span>
                             <span class="nxl-mtext">M (Manage)</span><span class="nxl-arrow"><i></i></span>
                         </a>
@@ -592,7 +592,7 @@
                         <div class="card stretch stretch-full">
                             <div class="card-header">
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <h5 class="card-title">INDIVIDUAL SHEET (Total Count: <span id="collegeCount2">
+                                    <h5 class="card-title">"A" INDIVIDUAL SHEET (Total Count: <span id="collegeCount2">
                                             0</span>)</h5>
                                 </div>
                                 <div class="card-header-action d-flex align-items-center gap-2">
@@ -650,9 +650,9 @@
                                     <ul class="list-unstyled d-flex align-items-center gap-2 mb-0 pagination-common-style"
                                         id="pagination2"></ul>
                                     <div class="d-flex gap-2">
-                                        <button class="btn btn-primary" onclick="printTable2()">
+                                        <!-- <button class="btn btn-primary" onclick="printTable2()">
                                             <i class="bi bi-printer"></i> Print
-                                        </button>
+                                        </button> -->
                                         <button class="btn btn-success" onclick="exportToExcel2()">
                                             <i class="bi bi-file-earmark-excel"></i> Excel
                                         </button>
@@ -1089,7 +1089,7 @@
                         <div class="card stretch stretch-full">
                             <div class="card-header">
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <h5 class="card-title">MASTER SHEET (Total Data: <span id="collegeCount">
+                                    <h5 class="card-title">"A" MASTER SHEET (Total Data: <span id="collegeCount">
                                             0</span>)</h5>
                                 </div>
                                 <div class="card-header-action">
@@ -1152,9 +1152,9 @@
                                         <!-- Pagination links will be dynamically populated here -->
                                     </ul>
                                     <div class="d-flex gap-2">
-                                        <button class="btn btn-primary" onclick="printTable()">
+                                        <!-- <button class="btn btn-primary" onclick="printTable()">
                                             <i class="bi bi-printer"></i> Print
-                                        </button>
+                                        </button> -->
                                         <button class="btn btn-success" onclick="exportToExcel()">
                                             <i class="bi bi-file-earmark-excel"></i> Excel
                                         </button>
@@ -1366,9 +1366,9 @@
                                 <ul class="list-unstyled d-flex align-items-center gap-2 mb-0 pagination-common-style"
                                     id="pagination3"></ul>
                                 <div class="d-flex gap-2">
-                                    <button class="btn btn-primary" onclick="printTable3()">
+                                    <!-- <button class="btn btn-primary" onclick="printTable3()">
                                         <i class="bi bi-printer"></i> Print
-                                    </button>
+                                    </button> -->
                                     <button class="btn btn-success" onclick="exportToExcel3()">
                                         <i class="bi bi-file-earmark-excel"></i> Excel
                                     </button>
