--- a/templates/tables/others.html
+++ b/templates/tables/others.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Fundsroom" />
     <!--! The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags !-->
     <!--! BEGIN: Apps Title-->
-    <title>Fundsroom HR || CO</title>
+    <title>Fundsweb Sales || Switch Off</title>
     <!--! END:  Apps Title-->
     <!--! BEGIN: Favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/FundsAuditLogo.png" />
@@ -144,7 +144,7 @@
                         <div class="card stretch stretch-full">
                             <div class="card-header">
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <h5 class="card-title">Switch Off List (Total colleges: <span id="collegeCount2">
+                                    <h5 class="card-title">"A" Switch Off List (Total count: <span id="collegeCount2">
                                             0</span>)</h5>
                                 </div>
                                 <div class="card-header-action d-flex align-items-center gap-2">
