navabar: changed navbar in both files

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -73,24 +73,24 @@
                         </a>
                     </li>
                     <li class="nxl-item">
-                        <a href="CO.html" class="nxl-link">
+                        <a href="A.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-user-plus"></i></span>
-                            <span class="nxl-mtext">CO (Connect)</span><span class="nxl-arrow"><i></i></span>
+                            <span class="nxl-mtext">A (Attract)</span><span class="nxl-arrow"><i></i></span>
                         </a>
                     </li>
                     <li class="nxl-item">
-                        <a href="RE.html" class="nxl-link">
+                        <a href="I.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-share-2"></i></span>
-                            <span class="nxl-mtext">RE (Reach)</span><span class="nxl-arrow"><i></i></span>
+                            <span class="nxl-mtext">I (Interact)</span><span class="nxl-arrow"><i></i></span>
                         </a>
                     </li>
                     <li class="nxl-item">
-                        <a href="R.html" class="nxl-link">
+                        <a href="M.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-file-text"></i></span>
-                            <span class="nxl-mtext">R (Resume)</span><span class="nxl-arrow"><i></i></span>
+                            <span class="nxl-mtext">M (Manage)</span><span class="nxl-arrow"><i></i></span>
                         </a>
                     </li>
-                    <li class="nxl-item">
+                    <!-- <li class="nxl-item">
                         <a href="I.html" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-briefcase"></i></span>
                             <span class="nxl-mtext">I (Interview)</span><span class="nxl-arrow"><i></i></span>
@@ -107,7 +107,7 @@
                             <span class="nxl-micon"><i class="feather-flag"></i></span>
                             <span class="nxl-mtext">K (Kick off)</span><span class="nxl-arrow"><i></i></span>
                         </a>
-                    </li>
+                    </li> -->
 
                     <!-- <li class="nxl-item nxl-hasmenu">
                         <a href="javascript:void(0);" class="nxl-link">
@@ -124,12 +124,12 @@
                             <li class="nxl-item"><a class="nxl-link" href="RE.html">K (Kick off)</a></li>
                         </ul>
                     </li> -->
-                    <li class="nxl-item">
+                    <!-- <li class="nxl-item">
                         <a href="javascript:void(0);" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-bar-chart-2"></i></span>
                             <span class="nxl-mtext">My Performance</span><span class="nxl-arrow"><i></i></span>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nxl-item">
                         <a href="javascript:void(0);" class="nxl-link">
                             <span class="nxl-micon"><i class="feather-log-out"></i></span>
