--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Fundsroom" />
     <!--! The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags !-->
     <!--! BEGIN: Apps Title-->
-    <title>Fundsroom HR || CO</title>
+    <title>Fundsroom Sales || Profile</title>
     <!--! END:  Apps Title-->
     <!--! BEGIN: Favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="./../assets/images/FundsAuditLogo.png" />
