A sheet: updated spelling mistake

--- a/templates/A.html
+++ b/templates/A.html
@@ -512,7 +512,7 @@
                     <label for="excelUpload" class="dropdown-item upload-trigger" style="cursor:pointer;">
                         <span class="btn btn-icon" data-bs-toggle="tooltip" data-bs-trigger="hover"
                             title="Upload Excel files (Less than 5MB)">
-                            <i class="feather-upload"></i> Upload College Data
+                            <i class="feather-upload"></i> Upload Data
                         </span>
                     </label>
                     <input type="file" id="excelUpload" accept=".csv,.xls,.xlsx" style="display:none;">
