A and I sheet: updated the content

--- a/templates/I.html
+++ b/templates/I.html
@@ -826,7 +826,7 @@
                         <div class="card stretch stretch-full overflow-hidden">
                             <div class="bg-success text-white">
                                 <div class="p-4 d-flex justify-content-between align-items-center">
-                                    <h5 class="text-reset">ANALYTICS</h5>
+                                    <h5 class="text-reset">SUBSCRIPTION ANALYTICS</h5>
                                 </div>
                                 <div id="conversion-statistic-bar-chart"></div>
                             </div>
