--- a/templates/A.html
+++ b/templates/A.html
@@ -763,7 +763,7 @@
                         <div class="card stretch stretch-full overflow-hidden">
                             <div class="bg-success text-white">
                                 <div class="p-4 d-flex justify-content-between align-items-center">
-                                    <h5 class="text-reset">ANALYTICS</h5>
+                                    <h5 class="text-reset">C1 ANALYTICS</h5>
                                 </div>
                                 <div id="conversion-statistic-bar-chart"></div>
                             </div>
